--- a/src/index.html
+++ b/src/index.html
@@ -363,9 +363,9 @@
         <!-- Sponsered Section -->
          <div class="flex flex-wrap justify-around gap-12 items-center" data-aos="fade-up">
           <img src="./images/Netflix.png" alt="Netflix">
-          <img src="./images/reddit.png" alt="reddit">
+          <img src="./images/Reddit.png" alt="reddit">
           <img src="./images/Amazon.png" alt="Amazon">
-          <img src="./images/discord.png" alt="discord">
+          <img src="./images/Discord.png" alt="discord">
           <img src="./images/spotify (1).png" alt="spotify">
         
          </div>
